--- a/app.html
+++ b/app.html
@@ -16,16 +16,19 @@
     <h2>Doge McGee</h2>
     <ul class="nav nav-pills flex-column">
       <li class="nav-item">
-        <a class="nav-link active" href="#">Profile</a>
+        <a class="nav-link active" href="index.html">Profile</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active" href="#">Browse</a>
+        <a class="nav-link active" href="index.html">Browse</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active" href="apps.html">Applications</a>
+        <a class="nav-link active" href="app.html">Applications</a>
       </li>
       <li class="nav-item">
         <a class="nav-link active" href="requests.html">Requested</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active" href="friends.html">Friends</a>
       </li>
       <div class="contact-info">
         <h4>Contact Information:</h4>
@@ -33,7 +36,7 @@
       </div>
 
   </div>
-  <div class="myJumbotron">
+<!--  <div class="myJumbotron">
     <div class="jumbotron">
       <h1 class="display-3">Pawrty Applications</h1>
       <p class="lead">"APPLICATIONS GO HERE"</p>
@@ -43,7 +46,88 @@
         <a class="btn btn-primary btn-lg" href="index.html" role="button">Apply Here</a>
       </p>
     </div>
+  </div> -->
+
+  <div class="main-body">
+    <div class="main-header">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <a class="navbar-brand" href="#">Pawty</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarColor01">
+
+          <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="text" placeholder="Search">
+            <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+          </form>
+        </div>
+      </nav>
+    </div>
+    <div class="main-content">
+      <ul class="dog-list">
+        <li>
+          <img class="dog-profile" src="imgs/doge-square.jpg" alt="dog">
+          <h4>Doge McGee</h4>
+        </li>
+        <li>
+          <img class="dog-profile" src="imgs/doge-square.jpg" alt="dog">
+          <h4>Doge McGee</h4>
+        </li>
+        <li>
+          <img class="dog-profile" src="imgs/doge-square.jpg" alt="dog">
+          <h4>Doge McGee</h4>
+        </li>
+        <li>
+          <img class="dog-profile" src="imgs/doge-square.jpg" alt="dog">
+          <h4>Doge McGee</h4>
+        </li>
+        <li>
+          <img class="dog-profile" src="imgs/doge-square.jpg" alt="dog">
+          <h4>Doge McGee</h4>
+        </li>
+        <li>
+          <img class="dog-profile" src="imgs/doge-square.jpg" alt="dog">
+          <h4>Doge McGee</h4>
+        </li>
+        <li>
+          <img class="dog-profile" src="imgs/doge-square.jpg" alt="dog">
+          <h4>Doge McGee</h4>
+        </li>
+        <li>
+          <img class="dog-profile" src="imgs/doge-square.jpg" alt="dog">
+          <h4>Doge McGee</h4>
+        </li>
+      </ul>
+      <div class="page-navigation">
+        <ul class="pagination pagination-lg">
+          <li class="page-item disabled">
+            <a class="page-link" href="#">&laquo;</a>
+          </li>
+          <li class="page-item active">
+            <a class="page-link" href="#">1</a>
+          </li>
+          <li class="page-item">
+            <a class="page-link" href="#">2</a>
+          </li>
+          <li class="page-item">
+            <a class="page-link" href="#">3</a>
+          </li>
+          <li class="page-item">
+            <a class="page-link" href="#">4</a>
+          </li>
+          <li class="page-item">
+            <a class="page-link" href="#">5</a>
+          </li>
+          <li class="page-item">
+            <a class="page-link" href="#">&raquo;</a>
+          </li>
+        </ul>
+      </div>
+    </div>
   </div>
+
+  
 </body>
 
 </html>
