--- a/index.html
+++ b/index.html
@@ -14,16 +14,19 @@
     <h2>Doge McGee</h2>
     <ul class="nav nav-pills flex-column">
       <li class="nav-item">
-        <a class="nav-link active" href="#">Profile</a>
+        <a class="nav-link active" href="index.html">Profile</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active" href="#">Browse</a>
+        <a class="nav-link active" href="index.html">Browse</a>
       </li>
       <li class="nav-item">
         <a class="nav-link active" href="app.html">Applications</a>
       </li>
       <li class="nav-item">
         <a class="nav-link active" href="requests.html">Requested</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active" href="friends.html">Friends</a>
       </li>
       <div class="contact-info">
         <h4>Contact Information:</h4>
@@ -50,38 +53,54 @@
     </div>
     <div class="main-content">
       <ul class="dog-list">
+        <a href="#">
         <li>
           <img class="dog-profile" src="imgs/doge-square.jpg" alt="dog">
           <h4>Doge McGee</h4>
         </li>
-        <li>
-          <img class="dog-profile" src="imgs/doge-square.jpg" alt="dog">
-          <h4>Doge McGee</h4>
-        </li>
-        <li>
-          <img class="dog-profile" src="imgs/doge-square.jpg" alt="dog">
-          <h4>Doge McGee</h4>
-        </li>
-        <li>
-          <img class="dog-profile" src="imgs/doge-square.jpg" alt="dog">
-          <h4>Doge McGee</h4>
-        </li>
-        <li>
-          <img class="dog-profile" src="imgs/doge-square.jpg" alt="dog">
-          <h4>Doge McGee</h4>
-        </li>
-        <li>
-          <img class="dog-profile" src="imgs/doge-square.jpg" alt="dog">
-          <h4>Doge McGee</h4>
-        </li>
-        <li>
-          <img class="dog-profile" src="imgs/doge-square.jpg" alt="dog">
-          <h4>Doge McGee</h4>
-        </li>
-        <li>
-          <img class="dog-profile" src="imgs/doge-square.jpg" alt="dog">
-          <h4>Doge McGee</h4>
-        </li>
+      </a>
+      <a href="#">
+      <li>
+        <img class="dog-profile" src="imgs/doge-square.jpg" alt="dog">
+        <h4>Doge McGee</h4>
+      </li>
+    </a>
+    <a href="#">
+    <li>
+      <img class="dog-profile" src="imgs/doge-square.jpg" alt="dog">
+      <h4>Doge McGee</h4>
+    </li>
+  </a>
+  <a href="#">
+  <li>
+    <img class="dog-profile" src="imgs/doge-square.jpg" alt="dog">
+    <h4>Doge McGee</h4>
+  </li>
+</a>
+<a href="#">
+<li>
+  <img class="dog-profile" src="imgs/doge-square.jpg" alt="dog">
+  <h4>Doge McGee</h4>
+</li>
+</a>
+<a href="#">
+<li>
+  <img class="dog-profile" src="imgs/doge-square.jpg" alt="dog">
+  <h4>Doge McGee</h4>
+</li>
+</a>
+<a href="#">
+<li>
+  <img class="dog-profile" src="imgs/doge-square.jpg" alt="dog">
+  <h4>Doge McGee</h4>
+</li>
+</a>
+<a href="#">
+<li>
+  <img class="dog-profile" src="imgs/doge-square.jpg" alt="dog">
+  <h4>Doge McGee</h4>
+</li>
+  </a>
       </ul>
       <div class="page-navigation">
         <ul class="pagination pagination-lg">
