--- a/index.html
+++ b/index.html
@@ -55,49 +55,49 @@
       <ul class="dog-list">
         <a href="#">
         <li>
-          <img class="dog-profile" src="imgs/doge-square.jpg" alt="dog">
+          <img class="dog-profile" data-image="thumbnail" src="imgs/doge-square.jpg" alt="dog">
           <h4>Doge McGee</h4>
         </li>
       </a>
       <a href="#">
       <li>
-        <img class="dog-profile" src="imgs/doge-square.jpg" alt="dog">
+        <img class="dog-profile" data-image="thumbnail" src="imgs/doge-square.jpg" alt="dog">
         <h4>Doge McGee</h4>
       </li>
     </a>
     <a href="#">
     <li>
-      <img class="dog-profile" src="imgs/doge-square.jpg" alt="dog">
+      <img class="dog-profile" data-image="thumbnail" src="imgs/doge-square.jpg" alt="dog">
       <h4>Doge McGee</h4>
     </li>
   </a>
   <a href="#">
   <li>
-    <img class="dog-profile" src="imgs/doge-square.jpg" alt="dog">
+    <img class="dog-profile" data-image="thumbnail" src="imgs/doge-square.jpg" alt="dog">
     <h4>Doge McGee</h4>
   </li>
 </a>
 <a href="#">
 <li>
-  <img class="dog-profile" src="imgs/doge-square.jpg" alt="dog">
+  <img class="dog-profile" data-image="thumbnail" src="imgs/doge-square.jpg" alt="dog">
   <h4>Doge McGee</h4>
 </li>
 </a>
 <a href="#">
 <li>
-  <img class="dog-profile" src="imgs/doge-square.jpg" alt="dog">
+  <img class="dog-profile" data-image="thumbnail" src="imgs/doge-square.jpg" alt="dog">
   <h4>Doge McGee</h4>
 </li>
 </a>
 <a href="#">
 <li>
-  <img class="dog-profile" src="imgs/doge-square.jpg" alt="dog">
+  <img class="dog-profile" data-image="thumbnail" src="imgs/doge-square.jpg" alt="dog">
   <h4>Doge McGee</h4>
 </li>
 </a>
 <a href="#">
 <li>
-  <img class="dog-profile" src="imgs/doge-square.jpg" alt="dog">
+  <img class="dog-profile" data-image="thumbnail" src="imgs/doge-square.jpg" alt="dog">
   <h4>Doge McGee</h4>
 </li>
   </a>
