did some front-end

--- a/index.html
+++ b/index.html
@@ -54,53 +54,53 @@
     <div class="main-content">
       <ul class="dog-list">
         <a href="#">
-        <li>
-          <img class="dog-profile" data-image="thumbnail" src="imgs/doge-square.jpg" alt="dog">
-          <h4>Doge McGee</h4>
-        </li>
-      </a>
-      <a href="#">
-      <li>
-        <img class="dog-profile" data-image="thumbnail" src="imgs/doge-square.jpg" alt="dog">
-        <h4>Doge McGee</h4>
-      </li>
-    </a>
-    <a href="#">
-    <li>
-      <img class="dog-profile" data-image="thumbnail" src="imgs/doge-square.jpg" alt="dog">
-      <h4>Doge McGee</h4>
-    </li>
-  </a>
-  <a href="#">
-  <li>
-    <img class="dog-profile" data-image="thumbnail" src="imgs/doge-square.jpg" alt="dog">
-    <h4>Doge McGee</h4>
-  </li>
-</a>
-<a href="#">
-<li>
-  <img class="dog-profile" data-image="thumbnail" src="imgs/doge-square.jpg" alt="dog">
-  <h4>Doge McGee</h4>
-</li>
-</a>
-<a href="#">
-<li>
-  <img class="dog-profile" data-image="thumbnail" src="imgs/doge-square.jpg" alt="dog">
-  <h4>Doge McGee</h4>
-</li>
-</a>
-<a href="#">
-<li>
-  <img class="dog-profile" data-image="thumbnail" src="imgs/doge-square.jpg" alt="dog">
-  <h4>Doge McGee</h4>
-</li>
-</a>
-<a href="#">
-<li>
-  <img class="dog-profile" data-image="thumbnail" src="imgs/doge-square.jpg" alt="dog">
-  <h4>Doge McGee</h4>
-</li>
-  </a>
+          <li class="dog-profile">
+            <img class="dog-image" data-image="thumbnail" src="imgs/doge-square.jpg" alt="dog">
+            <h4 class="dog-name">Doge McGee</h4>
+          </li>
+        </a>
+        <a href="#">
+          <li class="dog-profile">
+            <img class="dog-image" data-image="thumbnail" src="imgs/doge-square.jpg" alt="dog">
+            <h4 class="dog-name">Doge McGee</h4>
+          </li>
+        </a>
+        <a href="#">
+          <li class="dog-profile">
+            <img class="dog-image" data-image="thumbnail" src="imgs/doge-square.jpg" alt="dog">
+            <h4 class="dog-name">Doge McGee</h4>
+          </li>
+        </a>
+        <a href="#">
+          <li class="dog-profile">
+            <img class="dog-image" data-image="thumbnail" src="imgs/doge-square.jpg" alt="dog">
+            <h4 class="dog-name">Doge McGee</h4>
+          </li>
+        </a>
+        <a href="#">
+          <li class="dog-profile">
+            <img class="dog-image" data-image="thumbnail" src="imgs/doge-square.jpg" alt="dog">
+            <h4 class="dog-name">Doge McGee</h4>
+          </li>
+        </a>
+        <a href="#">
+          <li class="dog-profile">
+            <img class="dog-image" data-image="thumbnail" src="imgs/doge-square.jpg" alt="dog">
+            <h4 class="dog-name">Doge McGee</h4>
+          </li>
+        </a>
+        <a href="#">
+          <li class="dog-profile">
+            <img class="dog-image" data-image="thumbnail" src="imgs/doge-square.jpg" alt="dog">
+            <h4 class="dog-name">Doge McGee</h4>
+          </li>
+        </a>
+        <a href="#">
+          <li class="dog-profile">
+            <img class="dog-image" data-image="thumbnail" src="imgs/doge-square.jpg" alt="dog">
+            <h4 class="dog-name">Doge McGee</h4>
+          </li>
+        </a>
       </ul>
       <div class="page-navigation">
         <ul class="pagination pagination-lg">
