added basic modal functionality

--- a/friends.html
+++ b/friends.html
@@ -51,38 +51,54 @@
     </div>
     <div class="main-content">
       <ul class="dog-list">
-        <li>
-          <img class="dog-profile" src="imgs/doge-square.jpg" alt="dog">
-          <h4>Doge McGee</h4>
-        </li>
-        <li>
-          <img class="dog-profile" src="imgs/doge-square.jpg" alt="dog">
-          <h4>Doge McGee</h4>
-        </li>
-        <li>
-          <img class="dog-profile" src="imgs/doge-square.jpg" alt="dog">
-          <h4>Doge McGee</h4>
-        </li>
-        <li>
-          <img class="dog-profile" src="imgs/doge-square.jpg" alt="dog">
-          <h4>Doge McGee</h4>
-        </li>
-        <li>
-          <img class="dog-profile" src="imgs/doge-square.jpg" alt="dog">
-          <h4>Doge McGee</h4>
-        </li>
-        <li>
-          <img class="dog-profile" src="imgs/doge-square.jpg" alt="dog">
-          <h4>Doge McGee</h4>
-        </li>
-        <li>
-          <img class="dog-profile" src="imgs/doge-square.jpg" alt="dog">
-          <h4>Doge McGee</h4>
-        </li>
-        <li>
-          <img class="dog-profile" src="imgs/doge-square.jpg" alt="dog">
-          <h4>Doge McGee</h4>
-        </li>
+        <a href="#">
+          <li class="dog-profile">
+            <img class="dog-image" data-image="thumbnail" src="imgs/doge-square.jpg" alt="dog">
+            <h4 class="dog-name">Doge McGee</h4>
+          </li>
+        </a>
+        <a href="#">
+          <li class="dog-profile">
+            <img class="dog-image" data-image="thumbnail" src="imgs/doge-square.jpg" alt="dog">
+            <h4 class="dog-name">Doge McGee</h4>
+          </li>
+        </a>
+        <a href="#">
+          <li class="dog-profile">
+            <img class="dog-image" data-image="thumbnail" src="imgs/doge-square.jpg" alt="dog">
+            <h4 class="dog-name">Doge McGee</h4>
+          </li>
+        </a>
+        <a href="#">
+          <li class="dog-profile">
+            <img class="dog-image" data-image="thumbnail" src="imgs/doge-square.jpg" alt="dog">
+            <h4 class="dog-name">Doge McGee</h4>
+          </li>
+        </a>
+        <a href="#">
+          <li class="dog-profile">
+            <img class="dog-image" data-image="thumbnail" src="imgs/doge-square.jpg" alt="dog">
+            <h4 class="dog-name">Doge McGee</h4>
+          </li>
+        </a>
+        <a href="#">
+          <li class="dog-profile">
+            <img class="dog-image" data-image="thumbnail" src="imgs/doge-square.jpg" alt="dog">
+            <h4 class="dog-name">Doge McGee</h4>
+          </li>
+        </a>
+        <a href="#">
+          <li class="dog-profile">
+            <img class="dog-image" data-image="thumbnail" src="imgs/doge-square.jpg" alt="dog">
+            <h4 class="dog-name">Doge McGee</h4>
+          </li>
+        </a>
+        <a href="#">
+          <li class="dog-profile">
+            <img class="dog-image" data-image="thumbnail" src="imgs/doge-square.jpg" alt="dog">
+            <h4 class="dog-name">Doge McGee</h4>
+          </li>
+        </a>
       </ul>
       <div class="page-navigation">
         <ul class="pagination pagination-lg">
@@ -111,6 +127,6 @@
       </div>
     </div>
   </div>
-  
+
   </body>
 </html>
