--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
   </div>
 
   <div class="main-body">
+
     <div class="main-header">
       <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <a class="navbar-brand" href="#">Pawty</a>
@@ -102,6 +103,7 @@
           </li>
         </a>
       </ul>
+
       <div class="page-navigation">
         <ul class="pagination pagination-lg">
           <li class="page-item disabled">
@@ -128,8 +130,20 @@
         </ul>
       </div>
     </div>
-  </div>
-  <script src="scripts/main.js" charset="utf-8"></script>
+
+
+    <!-- The Modal -->
+    <div id="myModal" class="modal">
+
+      <!-- Modal content -->
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <p>Some text in the Modal..</p>
+      </div>
+    </div>
+
+
+    <script src="scripts/main.js" charset="utf-8"></script>
 </body>
 
 </html>
