--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Pawrty</title>
   <link rel="stylesheet" href="stylesheets/bootstrap.min.css">
   <link rel="stylesheet" href="stylesheets/main.css">
+  <link rel="icon" href="dogeicon_1.png" type ="image/png"/>
 </head>
 
 <body>
