did some rework on front-end

--- a/requests.html
+++ b/requests.html
@@ -11,9 +11,14 @@
 <body>
   <div class="sidebar">
     <img class="profile" src="imgs/doge-square.jpg" alt="profle-picture">
-    <h2>Doge McGee</h2>
+    <h4 class="profile-name">Doge McGee</h4>
     <ul class="nav nav-pills flex-column">
-      <li class="nav-item">
+      <button type="button" onclick="location.href='index.html';"class="btn btn-outline-primary">Profile</button>
+      <button type="button" onclick="location.href='index.html';"class="btn btn-outline-primary">Browse</button>
+      <button type="button" onclick="location.href='app.html';" class="btn btn-outline-primary">Applications</button>
+      <button type="button" onclick="location.href='requests.html';"class="btn btn-outline-primary active">Requested</button>
+      <button type="button" onclick="location.href='friends.html';"class="btn btn-outline-primary">Friends</button>
+      <!-- <li class="nav-item">
         <a class="nav-link active" href="index.html">Profile</a>
       </li>
       <li class="nav-item">
@@ -31,7 +36,7 @@
       <div class="contact-info">
         <h4>Contact Information:</h4>
         <p>Email: pawrty@support.io</p>
-      </div>
+      </div> -->
 
   </div>
   <div class="main-body">
