--- a/index.html
+++ b/index.html
@@ -11,10 +11,15 @@
 <body>
   <div class="sidebar">
     <img class="profile" src="imgs/doge-square.jpg" alt="profle-picture">
-    <h2>Doge McGee</h2>
+    <h4 class = "profile-name">Doge McGee</h4>
     <ul class="nav nav-pills flex-column">
-      <li class="nav-item">
-        <a class="nav-link active" href="index.html">Profile</a>
+      <button type="button" onclick="location.href='index.html';"class="btn btn-outline-primary">Profile</button>
+      <button type="button" onclick="location.href='index.html';"class="btn btn-outline-primary active">Browse</button>
+      <button type="button" onclick="location.href='app.html';" class="btn btn-outline-primary">Applications</button>
+      <button type="button" onclick="location.href='requests.html';"class="btn btn-outline-primary">Requested</button>
+      <button type="button" onclick="location.href='friends.html';"class="btn btn-outline-primary">Friends</button>
+      <!-- <li class="nav-item">
+        <a href="index.html">Profile</a>
       </li>
       <li class="nav-item">
         <a class="nav-link active" href="index.html">Browse</a>
@@ -27,11 +32,11 @@
       </li>
       <li class="nav-item">
         <a class="nav-link active" href="friends.html">Friends</a>
-      </li>
-      <div class="contact-info">
+      </li> -->
+      <!-- <div class="contact-info">
         <h4>Contact Information:</h4>
         <p>Email: pawrty@support.io</p>
-      </div>
+      </div> -->
 
   </div>
 
