--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div class="main-content">
       <ul class="dog-list">
         <a href="#">
-          <li class="dog-profile">
+          <li class="dog-profile" data-id = "ID">
             <img class="dog-image" data-image="thumbnail" src="imgs/doge-square.jpg" alt="dog">
             <h4 class="dog-name">Doge McGee</h4>
           </li>
@@ -147,8 +147,9 @@
       </div>
     </div>
 
-
+    <script src="scripts/remotedatastore.js" charset="utf-8"></script>
     <script src="scripts/main.js" charset="utf-8"></script>
+
 </body>
 
 </html>
