--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         <p>Some text in the Modal..</p>
       </div>
     </div>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" charset="utf-8"></script>
     <script src="scripts/remotedatastore.js" charset="utf-8"></script>
     <script src="scripts/main.js" charset="utf-8"></script>
 
