tried populating profile cards

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </nav>
     </div>
     <div class="main-content">
-      <ul class="dog-list">
+      <ul class="dog-list" data-list="main-dog-list">
         <a href="#">
           <li class="dog-profile" data-id = "ID">
             <img class="dog-image" data-image="thumbnail" src="imgs/doge-square.jpg" alt="dog">
@@ -147,8 +147,9 @@
       </div>
     </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" charset="utf-8"></script>
-    <script src="scripts/remotedatastore.js" charset="utf-8"></script>
-    <script src="scripts/main.js" charset="utf-8"></script>
+  <script src="scripts/populate.js" charset="utf-8"></script>
+  <script src="scripts/remotedatastore.js" charset="utf-8"></script>
+  <script src="scripts/main.js" charset="utf-8"></script>
 
 </body>
 
