made different profile cards

--- a/doge-mcgee.html
+++ b/doge-mcgee.html
@@ -57,57 +57,7 @@
         </div>
       </nav>
     </div>
-    <div class="main-content">
-      <ul class="dog-list" data-list="main-dog-list">
-        <a href="#">
-          <li class="dog-profile" data-id = "ID">
-            <img class="dog-image" data-image="thumbnail" src="imgs/doge-square.jpg" alt="dog">
-            <h4 class="dog-name">Doge McGee</h4>
-          </li>
-        </a>
-        <a href="#">
-          <li class="dog-profile">
-            <img class="dog-image" data-image="thumbnail" src="imgs/good_boi-square.jpg" alt="dog">
-            <h4 class="dog-name">Fluffy Bro</h4>
-          </li>
-        </a>
-        <a href="#">
-          <li class="dog-profile">
-            <img class="dog-image" data-image="thumbnail" src="imgs/dog3.jpg" alt="dog">
-            <h4 class="dog-name">Sir Square Up</h4>
-          </li>
-        </a>
-        <a href="#">
-          <li class="dog-profile">
-            <img class="dog-image" data-image="thumbnail" src="imgs/dog4-square.jpg" alt="dog">
-            <h4 class="dog-name">Sir Peanut</h4>
-          </li>
-        </a>
-        <a href="#">
-          <li class="dog-profile">
-            <img class="dog-image" data-image="thumbnail" src="imgs/dog5-square.jpg" alt="dog">
-            <h4 class="dog-name">Starky the Spark</h4>
-          </li>
-        </a>
-        <a href="#">
-          <li class="dog-profile">
-            <img class="dog-image" data-image="thumbnail" src="imgs/dog6-square.jpg" alt="dog">
-            <h4 class="dog-name">Howlin' Howler</h4>
-          </li>
-        </a>
-        <!-- <a href="#">
-          <li class="dog-profile">
-            <img class="dog-image" data-image="thumbnail" src="imgs/doge-square.jpg" alt="dog">
-            <h4 class="dog-name">Doge McGee</h4>
-          </li>
-        </a>
-        <a href="#">
-          <li class="dog-profile">
-            <img class="dog-image" data-image="thumbnail" src="imgs/doge-square.jpg" alt="dog">
-            <h4 class="dog-name">Doge McGee</h4>
-          </li>
-        </a> -->
-      </ul>
+
 
       <div class="page-navigation">
         <ul class="pagination pagination-lg">
@@ -118,25 +68,25 @@
             <a class="page-link" href="#">1</a>
           </li>
           <li class="page-item">
-            <a class="page-link" href="page-2.html">2</a>
+            <a class="page-link" href="#">2</a>
           </li>
           <li class="page-item">
-            <a class="page-link" href="page-2.html">&raquo;</a>
+            <a class="page-link" href="#">3</a>
+          </li>
+          <li class="page-item">
+            <a class="page-link" href="#">4</a>
+          </li>
+          <li class="page-item">
+            <a class="page-link" href="#">5</a>
+          </li>
+          <li class="page-item">
+            <a class="page-link" href="#">&raquo;</a>
           </li>
         </ul>
       </div>
     </div>
 
 
-    <!-- The Modal -->
-    <div id="myModal" class="modal">
-
-      <!-- Modal content -->
-      <div class="modal-content">
-        <span class="close">&times;</span>
-        <p>Some text in the Modal..</p>
-      </div>
-    </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" charset="utf-8"></script>
   <script src="scripts/populate.js" charset="utf-8"></script>
   <script src="scripts/remotedatastore.js" charset="utf-8"></script>
