--- a/page-2.html
+++ b/page-2.html
@@ -61,38 +61,38 @@
       <ul class="dog-list" data-list="main-dog-list">
         <a href="#">
           <li class="dog-profile" data-id = "ID">
-            <img class="dog-image" data-image="thumbnail" src="imgs/doge-square.jpg" alt="dog">
-            <h4 class="dog-name">Doge McGee</h4>
+            <img class="dog-image" data-image="thumbnail" src="imgs/dog7-square.jpg" alt="dog">
+            <h4 class="dog-name">Golden Gal</h4>
           </li>
         </a>
         <a href="#">
           <li class="dog-profile">
-            <img class="dog-image" data-image="thumbnail" src="imgs/good_boi-square.jpg" alt="dog">
-            <h4 class="dog-name">Fluffy Bro</h4>
+            <img class="dog-image" data-image="thumbnail" src="imgs/dog8-square.jpg" alt="dog">
+            <h4 class="dog-name">Mc Maddie</h4>
           </li>
         </a>
         <a href="#">
           <li class="dog-profile">
-            <img class="dog-image" data-image="thumbnail" src="imgs/dog3.jpg" alt="dog">
-            <h4 class="dog-name">Sir Square Up</h4>
+            <img class="dog-image" data-image="thumbnail" src="imgs/dog9-square.jpg" alt="dog">
+            <h4 class="dog-name">Happy boi</h4>
           </li>
         </a>
         <a href="#">
           <li class="dog-profile">
-            <img class="dog-image" data-image="thumbnail" src="imgs/dog4-square.jpg" alt="dog">
-            <h4 class="dog-name">Sir Peanut</h4>
+            <img class="dog-image" data-image="thumbnail" src="imgs/dog10-square.jpg" alt="dog">
+            <h4 class="dog-name">Miss Ruff</h4>
           </li>
         </a>
         <a href="#">
           <li class="dog-profile">
-            <img class="dog-image" data-image="thumbnail" src="imgs/dog5-square.jpg" alt="dog">
-            <h4 class="dog-name">Starky the Spark</h4>
+            <img class="dog-image" data-image="thumbnail" src="imgs/dog11.jpg" alt="dog">
+            <h4 class="dog-name">Super Boy</h4>
           </li>
         </a>
         <a href="#">
           <li class="dog-profile">
-            <img class="dog-image" data-image="thumbnail" src="imgs/dog6-square.jpg" alt="dog">
-            <h4 class="dog-name">Howlin' Howler</h4>
+            <img class="dog-image" data-image="thumbnail" src="imgs/dog12-square.jpg" alt="dog">
+            <h4 class="dog-name">Baller McGee</h4>
           </li>
         </a>
         <!-- <a href="#">
@@ -111,17 +111,17 @@
 
       <div class="page-navigation">
         <ul class="pagination pagination-lg">
-          <li class="page-item disabled">
-            <a class="page-link" href="#">&laquo;</a>
+          <li class="page-item">
+            <a class="page-link" href="index.html">&laquo;</a>
+          </li>
+          <li class="page-item">
+            <a class="page-link" href="index.html">1</a>
           </li>
           <li class="page-item active">
-            <a class="page-link" href="#">1</a>
+            <a class="page-link" href="#">2</a>
           </li>
-          <li class="page-item">
-            <a class="page-link" href="page-2.html">2</a>
-          </li>
-          <li class="page-item">
-            <a class="page-link" href="page-2.html">&raquo;</a>
+          <li class="page-item disabled">
+            <a class="page-link" href="#">&raquo;</a>
           </li>
         </ul>
       </div>
