added profile pages

--- a/baller-mcgee.html
+++ b/baller-mcgee.html
@@ -58,22 +58,23 @@
       </nav>
     </div>
     <div class="profile-content">
-        <img class="profile-picture" data-image="thumbnail" src="imgs/doge-square.jpg" alt="Doge McGee">
+        <img class="profile-picture" data-image="thumbnail" src="imgs/dog12-square.jpg" alt="Doge McGee">
       <div class="profile-description">
         <h3>Dog Name</h3>
-        <p>Doge McGee</p>
+        <p>Baller McGee</p>
         <h3>Owner Name: </h3>
-        <p>James Harden</p>
+        <p>Joesph Snowflake</p>
         <h3>Breed: </h3>
         <p>Golden Retriever</p>
         <h3>Aggression: </h3>
-        <p>Mad Nice</p>
+        <p>Neutral, unless you steal his ball, then he's mad</p>
         <h3>Age</h3>
-        <p>4</p>
+        <p>3</p>
         <h3>Notes: </h3>
-        <p>Great at fetching tennis balls</p>
+        <p>Great at fetching tennis balls. He can be very possessive over his tennis balls.</p>
         <button type="button" class="btn btn-outline-info">Add Friend</button>
-                <button type="button" class="btn btn-outline-info" onclick="window.location.href = 'index.html';">Back</button>
+        <button type="button" class="btn btn-outline-info" onclick="window.location.href = 'index-page-2.html';">Back</button>
+      </div>
       </div>
     </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" charset="utf-8"></script>
