--- a/fluffy-bro.html
+++ b/fluffy-bro.html
@@ -58,22 +58,22 @@
       </nav>
     </div>
     <div class="profile-content">
-        <img class="profile-picture" data-image="thumbnail" src="imgs/doge-square.jpg" alt="Doge McGee">
+        <img class="profile-picture" data-image="thumbnail" src="imgs/good_boi-square.jpg" alt="Doge McGee">
       <div class="profile-description">
         <h3>Dog Name</h3>
-        <p>Doge McGee</p>
+        <p>Fluffy Bro/p>
         <h3>Owner Name: </h3>
-        <p>James Harden</p>
+        <p>Bijorn Unicorn</p>
         <h3>Breed: </h3>
-        <p>Golden Retriever</p>
+        <p>Pomeranian</p>
         <h3>Aggression: </h3>
-        <p>Mad Nice</p>
+        <p>Not Aggressive</p>
         <h3>Age</h3>
-        <p>4</p>
+        <p>6.7</p>
         <h3>Notes: </h3>
-        <p>Great at fetching tennis balls</p>
+        <p>Loves cuddling because he is super soft. Must like physical contact or else its a deal-breaker</p>
         <button type="button" class="btn btn-outline-info">Add Friend</button>
-                <button type="button" class="btn btn-outline-info" onclick="window.location.href = 'index.html';">Back</button>
+        <button type="button" class="btn btn-outline-info" onclick="window.location.href = 'index.html';">Back</button>
       </div>
     </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" charset="utf-8"></script>
