--- a/golden-gal.html
+++ b/golden-gal.html
@@ -58,22 +58,22 @@
       </nav>
     </div>
     <div class="profile-content">
-        <img class="profile-picture" data-image="thumbnail" src="imgs/doge-square.jpg" alt="Doge McGee">
+        <img class="profile-picture" data-image="thumbnail" src="imgs/dog7-square.jpg" alt="Doge McGee">
       <div class="profile-description">
         <h3>Dog Name</h3>
-        <p>Doge McGee</p>
+        <p>Golden Gal</p>
         <h3>Owner Name: </h3>
-        <p>James Harden</p>
+        <p>Deborah Squarepants</p>
         <h3>Breed: </h3>
         <p>Golden Retriever</p>
         <h3>Aggression: </h3>
-        <p>Mad Nice</p>
+        <p>Affection, loving and caring</p>
         <h3>Age</h3>
-        <p>4</p>
+        <p>6</p>
         <h3>Notes: </h3>
-        <p>Great at fetching tennis balls</p>
+        <p>If you smile, she will smile! She knows how to make the day more exciting!</p>
         <button type="button" class="btn btn-outline-info">Add Friend</button>
-                <button type="button" class="btn btn-outline-info" onclick="window.location.href = 'index.html';">Back</button>
+        <button type="button" class="btn btn-outline-info" onclick="window.location.href = 'index-page-2.html';">Back</button>
       </div>
     </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" charset="utf-8"></script>
