--- a/howlin'-howler.html
+++ b/howlin'-howler.html
@@ -58,20 +58,20 @@
       </nav>
     </div>
     <div class="profile-content">
-        <img class="profile-picture" data-image="thumbnail" src="imgs/doge-square.jpg" alt="Doge McGee">
+        <img class="profile-picture" data-image="thumbnail" src="imgs/dog6-square.jpg" alt="Doge McGee">
       <div class="profile-description">
         <h3>Dog Name</h3>
-        <p>Doge McGee</p>
+        <p>Howlin' Howler</p>
         <h3>Owner Name: </h3>
-        <p>James Harden</p>
+        <p>Wolf Gang</p>
         <h3>Breed: </h3>
-        <p>Golden Retriever</p>
+        <p>Hiberian Husky</p>
         <h3>Aggression: </h3>
-        <p>Mad Nice</p>
+        <p>Passive-aggressive</p>
         <h3>Age</h3>
-        <p>4</p>
+        <p>8</p>
         <h3>Notes: </h3>
-        <p>Great at fetching tennis balls</p>
+        <p>He ususally likes to roll up with his friends, but is willing to go outside of his comfort zone</p>
         <button type="button" class="btn btn-outline-info">Add Friend</button>
                 <button type="button" class="btn btn-outline-info" onclick="window.location.href = 'index.html';">Back</button>
       </div>
