--- a/index-page-2.html
+++ b/index-page-2.html
@@ -59,37 +59,37 @@
     </div>
     <div class="main-content">
       <ul class="dog-list" data-list="main-dog-list">
-        <a href="#">
+        <a href="golden-gal.html">
           <li class="dog-profile" data-id = "ID">
             <img class="dog-image" data-image="thumbnail" src="imgs/dog7-square.jpg" alt="dog">
             <h4 class="dog-name">Golden Gal</h4>
           </li>
         </a>
-        <a href="#">
+        <a href="mc-maddie.html">
           <li class="dog-profile">
             <img class="dog-image" data-image="thumbnail" src="imgs/dog8-square.jpg" alt="dog">
             <h4 class="dog-name">Mc Maddie</h4>
           </li>
         </a>
-        <a href="#">
+        <a href="happy-boi.html">
           <li class="dog-profile">
             <img class="dog-image" data-image="thumbnail" src="imgs/dog9-square.jpg" alt="dog">
             <h4 class="dog-name">Happy boi</h4>
           </li>
         </a>
-        <a href="#">
+        <a href="miss-ruff.html">
           <li class="dog-profile">
             <img class="dog-image" data-image="thumbnail" src="imgs/dog10-square.jpg" alt="dog">
             <h4 class="dog-name">Miss Ruff</h4>
           </li>
         </a>
-        <a href="#">
+        <a href="super-boy.html">
           <li class="dog-profile">
             <img class="dog-image" data-image="thumbnail" src="imgs/dog11.jpg" alt="dog">
             <h4 class="dog-name">Super Boy</h4>
           </li>
         </a>
-        <a href="#">
+        <a href="baller-mcgee.html">
           <li class="dog-profile">
             <img class="dog-image" data-image="thumbnail" src="imgs/dog12-square.jpg" alt="dog">
             <h4 class="dog-name">Baller McGee</h4>
