--- a/index.html
+++ b/index.html
@@ -59,37 +59,37 @@
     </div>
     <div class="main-content">
       <ul class="dog-list" data-list="main-dog-list">
-        <a href="#">
+        <a href="doge-mcgee.html">
           <li class="dog-profile" data-id = "ID">
             <img class="dog-image" data-image="thumbnail" src="imgs/doge-square.jpg" alt="dog">
             <h4 class="dog-name">Doge McGee</h4>
           </li>
         </a>
-        <a href="#">
+        <a href="fluffy-bro.html">
           <li class="dog-profile">
             <img class="dog-image" data-image="thumbnail" src="imgs/good_boi-square.jpg" alt="dog">
             <h4 class="dog-name">Fluffy Bro</h4>
           </li>
         </a>
-        <a href="#">
+        <a href="sir-square-up.html">
           <li class="dog-profile">
             <img class="dog-image" data-image="thumbnail" src="imgs/dog3.jpg" alt="dog">
             <h4 class="dog-name">Sir Square Up</h4>
           </li>
         </a>
-        <a href="#">
+        <a href="sir-peanut.html">
           <li class="dog-profile">
             <img class="dog-image" data-image="thumbnail" src="imgs/dog4-square.jpg" alt="dog">
             <h4 class="dog-name">Sir Peanut</h4>
           </li>
         </a>
-        <a href="#">
+        <a href="starky-the-spark.html">
           <li class="dog-profile">
             <img class="dog-image" data-image="thumbnail" src="imgs/dog5-square.jpg" alt="dog">
             <h4 class="dog-name">Starky the Spark</h4>
           </li>
         </a>
-        <a href="#">
+        <a href="howlin'-howler.html">
           <li class="dog-profile">
             <img class="dog-image" data-image="thumbnail" src="imgs/dog6-square.jpg" alt="dog">
             <h4 class="dog-name">Howlin' Howler</h4>
@@ -118,25 +118,16 @@
             <a class="page-link" href="#">1</a>
           </li>
           <li class="page-item">
-            <a class="page-link" href="page-2.html">2</a>
+            <a class="page-link" href="index-page-2.html">2</a>
           </li>
           <li class="page-item">
-            <a class="page-link" href="page-2.html">&raquo;</a>
+            <a class="page-link" href="index-page-2.html">&raquo;</a>
           </li>
         </ul>
       </div>
     </div>
 
 
-    <!-- The Modal -->
-    <div id="myModal" class="modal">
-
-      <!-- Modal content -->
-      <div class="modal-content">
-        <span class="close">&times;</span>
-        <p>Some text in the Modal..</p>
-      </div>
-    </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" charset="utf-8"></script>
   <script src="scripts/populate.js" charset="utf-8"></script>
   <script src="scripts/remotedatastore.js" charset="utf-8"></script>
