--- a/miss-ruff.html
+++ b/miss-ruff.html
@@ -58,22 +58,23 @@
       </nav>
     </div>
     <div class="profile-content">
-        <img class="profile-picture" data-image="thumbnail" src="imgs/doge-square.jpg" alt="Doge McGee">
+        <img class="profile-picture" data-image="thumbnail" src="imgs/dog10-square.jpg" alt="Doge McGee">
       <div class="profile-description">
         <h3>Dog Name</h3>
-        <p>Doge McGee</p>
+        <p>Miss Ruff</p>
         <h3>Owner Name: </h3>
-        <p>James Harden</p>
+        <p>Wendy Cheeser</p>
         <h3>Breed: </h3>
-        <p>Golden Retriever</p>
+        <p>Rott Weiler</p>
         <h3>Aggression: </h3>
-        <p>Mad Nice</p>
+        <p>Very Mad most of the time</p>
         <h3>Age</h3>
-        <p>4</p>
+        <p>9</p>
         <h3>Notes: </h3>
-        <p>Great at fetching tennis balls</p>
+        <p>You don't want to be on her bad side. She can be very mean.</p>
         <button type="button" class="btn btn-outline-info">Add Friend</button>
-                <button type="button" class="btn btn-outline-info" onclick="window.location.href = 'index.html';">Back</button>
+        <button type="button" class="btn btn-outline-info" onclick="window.location.href = 'index-page-2.html';">Back</button>
+      </div>
       </div>
     </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" charset="utf-8"></script>
