--- a/sir-peanut.html
+++ b/sir-peanut.html
@@ -58,20 +58,20 @@
       </nav>
     </div>
     <div class="profile-content">
-        <img class="profile-picture" data-image="thumbnail" src="imgs/doge-square.jpg" alt="Doge McGee">
+        <img class="profile-picture" data-image="thumbnail" src="imgs/dog4-square.jpg" alt="Doge McGee">
       <div class="profile-description">
         <h3>Dog Name</h3>
-        <p>Doge McGee</p>
+        <p>Sir Peanut</p>
         <h3>Owner Name: </h3>
-        <p>James Harden</p>
+        <p>Henry Monopoly</p>
         <h3>Breed: </h3>
-        <p>Golden Retriever</p>
+        <p>Pugger</p>
         <h3>Aggression: </h3>
-        <p>Mad Nice</p>
+        <p>Neutral</p>
         <h3>Age</h3>
-        <p>4</p>
+        <p>3.5</p>
         <h3>Notes: </h3>
-        <p>Great at fetching tennis balls</p>
+        <p>His favorite food is peanuts. To get into his heart, give him peanuts</p>
         <button type="button" class="btn btn-outline-info">Add Friend</button>
                 <button type="button" class="btn btn-outline-info" onclick="window.location.href = 'index.html';">Back</button>
       </div>
