--- a/sir-square-up.html
+++ b/sir-square-up.html
@@ -58,20 +58,20 @@
       </nav>
     </div>
     <div class="profile-content">
-        <img class="profile-picture" data-image="thumbnail" src="imgs/doge-square.jpg" alt="Doge McGee">
+        <img class="profile-picture" data-image="thumbnail" src="imgs/dog3.jpg" alt="Doge McGee">
       <div class="profile-description">
         <h3>Dog Name</h3>
-        <p>Doge McGee</p>
+        <p>Sir Square Up</p>
         <h3>Owner Name: </h3>
-        <p>James Harden</p>
+        <p>Rocky Docky</p>
         <h3>Breed: </h3>
-        <p>Golden Retriever</p>
+        <p>Rott Weiler</p>
         <h3>Aggression: </h3>
         <p>Mad Nice</p>
         <h3>Age</h3>
-        <p>4</p>
+        <p>8</p>
         <h3>Notes: </h3>
-        <p>Great at fetching tennis balls</p>
+        <p>Despite his tiny stature, he will not hesitate to engage in a bark battle. Prepare some stamina potions.</p>
         <button type="button" class="btn btn-outline-info">Add Friend</button>
                 <button type="button" class="btn btn-outline-info" onclick="window.location.href = 'index.html';">Back</button>
       </div>
