--- a/starky-the-spark.html
+++ b/starky-the-spark.html
@@ -58,20 +58,20 @@
       </nav>
     </div>
     <div class="profile-content">
-        <img class="profile-picture" data-image="thumbnail" src="imgs/doge-square.jpg" alt="Doge McGee">
+        <img class="profile-picture" data-image="thumbnail" src="imgs/dog5-square.jpg" alt="Doge McGee">
       <div class="profile-description">
         <h3>Dog Name</h3>
-        <p>Doge McGee</p>
+        <p>Starky the Spark</p>
         <h3>Owner Name: </h3>
-        <p>James Harden</p>
+        <p>Ash Ketchum</p>
         <h3>Breed: </h3>
-        <p>Golden Retriever</p>
+        <p>Chocolate Labrador Retriever</p>
         <h3>Aggression: </h3>
-        <p>Mad Nice</p>
+        <p>Only aggressive in competitions</p>
         <h3>Age</h3>
         <p>4</p>
         <h3>Notes: </h3>
-        <p>Great at fetching tennis balls</p>
+        <p>Will race you until he wins. He is a sore loser.</p>
         <button type="button" class="btn btn-outline-info">Add Friend</button>
                 <button type="button" class="btn btn-outline-info" onclick="window.location.href = 'index.html';">Back</button>
       </div>
